[gd_scene load_steps=3 format=3 uid="uid://rjjlxt6cosbh"]

[ext_resource type="Script" path="res://scripts/DebugHTTP.gd" id="1_jlxlt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccljd"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlxlt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 43.0
offset_bottom = 27.0
text = "URL:"

[node name="URL" type="LineEdit" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 32.0
placeholder_text = "https://screeps.com/api/version"

[node name="Label2" type="Label" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 329.0
offset_top = 6.0
offset_right = 394.0
offset_bottom = 29.0
text = "Method:"

[node name="METHOD" type="OptionButton" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 399.0
offset_top = 5.0
offset_right = 485.0
offset_bottom = 36.0
item_count = 2
selected = 1
popup/item_0/text = "GET"
popup/item_0/id = 0
popup/item_1/text = "POST"
popup/item_1/id = 1

[node name="Label3" type="Label" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 44.0
offset_right = 44.0
offset_bottom = 67.0
text = "HEADERS:"

[node name="CodeEdit2" type="CodeEdit" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 360.0
offset_right = 559.0
offset_bottom = 625.0
delimiter_strings = Array[String](["\" \"", "' '"])
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="Label4" type="Label" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 330.0
offset_right = 59.0
offset_bottom = 353.0
text = "BODY:"

[node name="CodeEdit" type="CodeEdit" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 72.0
offset_right = 557.0
offset_bottom = 319.0
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="Button" type="Button" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 495.0
offset_top = 16.0
offset_right = 546.0
offset_bottom = 47.0
text = "SEND"

[node name="Panel2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 61.0
offset_bottom = 31.0
text = "Result:
"

[node name="RESULT" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 68.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 31.0
text = "99"

[node name="Label2" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 100.0
offset_top = 7.0
offset_right = 254.0
offset_bottom = 30.0
text = "Response Code:"

[node name="RESPONSE CODE" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 228.0
offset_top = 9.0
offset_right = 268.0
offset_bottom = 32.0
text = "999"

[node name="Label3" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 13.0
offset_top = 35.0
offset_right = 82.0
offset_bottom = 58.0
text = "Headers:"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 15.0
offset_top = 62.0
offset_right = 553.0
offset_bottom = 216.0

[node name="Label" type="Label" parent="HBoxContainer/Panel2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_ccljd")

[node name="Label4" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 2
offset_left = 16.0
offset_top = 223.0
offset_right = 103.0
offset_bottom = 246.0
text = "JSON Body:"

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_left = 15.0
offset_top = 255.0
offset_right = 553.0
offset_bottom = 625.0

[node name="Label" type="Label" parent="HBoxContainer/Panel2/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_ccljd")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="HBoxContainer/Panel/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
